--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<link rel-"stylesheet" type="text/css" href="style.css" />
 
 <nav id="navbar">
   <header>Metal Casting</header>
@@ -15,85 +15,121 @@
 </nav>
 
 <main id="main-doc">
-  
+
   <section class="main-section" id="introduction">
     <header>Introduction</header>
-    <p>Metal casting is a technology that has been refined by humans for thousands of years.  Modern techniques that are used in commercial foundries are largely outside the scope of what would be available to an individual.  However, many older techniques, revised to incorperate modern ammenaties, make metal casting accessbile to even the most amature of sculptures.
+    <p>Metal casting is a technology that has been refined by humans for thousands of years. Modern techniques that are
+      used in commercial foundries are largely outside the scope of what would be available to an individual. However,
+      many older techniques, revised to incorperate modern ammenaties, make metal casting accessbile to even the most
+      amature of sculptures.
   </section>
-  
+
   <section class="main-section" id="metals">
     <header>Metals</header>
     <p>It is important to choose the metal appropriate for the project at hand.</p>
-      <ul>
-        <li><strong>Pewter</strong> is an alloy of tin.  It has a very low melting point (170-230 °C), making it incredibly easy to work with.
-          <code>85-99% tin + 5-10% antimony + 2% copper = pewter</code></li>
-        <li><strong>Aluminum</strong> is very light-weight, malleable and resistant to corrosion.  It has a moderate melting point (660.32 °C).</li>
-        <li><strong>Copper</strong> is malleable and ductile, but oxidizes very quickly.  It has moderatly high melting point (1084.62 °C).</li>
-        <li><strong>Bronze/Brass</strong> are alloys of copper.  Bronze is a mixture of tin and copper, it is harder than copper and more resistant to oxidization.  Brass is a mixture of copper and zinc.  It has a very yellow color and is often used in decoration for its resemblance to gold.  Both have similar melting points to copper (though slightly lower).
-          <code>88% copper + 12% tin = bronze</code>
-          <code>65% copper + 33% zink + 2% lead = brass</code>
-        </li>
-        <li><strong>Iron</strong> is incredibly hard, brittle, and reacts with water and oxygen to from rust.  It is also very strong and the fourth most common element in the earth's crust.  It's melting temperature is very high (1538 °C>. The cast iron we use today is actually an alloy.  It differes from steel in that steel has a very tightly controled carbon content.
-          <code>iron + 2-4% carbon + 1-3% silicon = cast iron</code>
-          <code>iron + >2% carbon = steel</code>
-        </li>
+    <ul>
+      <li><strong>Pewter</strong> is an alloy of tin. It has a very low melting point (170-230 °C), making it incredibly
+        easy to work with.
+        <code>85-99% tin + 5-10% antimony + 2% copper = pewter</code></li>
+      <li><strong>Aluminum</strong> is very light-weight, malleable and resistant to corrosion. It has a moderate
+        melting point (660.32 °C).</li>
+      <li><strong>Copper</strong> is malleable and ductile, but oxidizes very quickly. It has moderatly high melting
+        point (1084.62 °C).</li>
+      <li><strong>Bronze/Brass</strong> are alloys of copper. Bronze is a mixture of tin and copper, it is harder than
+        copper and more resistant to oxidization. Brass is a mixture of copper and zinc. It has a very yellow color and
+        is often used in decoration for its resemblance to gold. Both have similar melting points to copper (though
+        slightly lower).
+        <code>88% copper + 12% tin = bronze</code>
+        <code>65% copper + 33% zink + 2% lead = brass</code>
+      </li>
+      <li><strong>Iron</strong> is incredibly hard, brittle, and reacts with water and oxygen to from rust. It is also
+        very strong and the fourth most common element in the earth's crust. It's melting temperature is very high (1538
+        °C>. The cast iron we use today is actually an alloy. It differes from steel in that steel has a very tightly
+        controled carbon content.
+        <code>iron + 2-4% carbon + 1-3% silicon = cast iron</code>
+        <code>iron + >2% carbon = steel</code>
+      </li>
     </ul>
   </section>
-  
+
   <section class="main-section" id="patterns">
     <header>Patterns</header>
-    <p>A pattern can be made out of almost anything.  Two materials commonly worked with are wax and oil clay.</p>
-    <p>A decent moldable wax can be made as follows:<code>100 parts paraffin wax + 1 part beeswax + 1 part microcrystalline wax = moldable wax</code></p>
-    <p>Oil clay can be made as follows:<code>100g calcium carbonate + 100g paraffin wax + 50ml petroleum jelly + 50ml linseed oil = oil clay</code></p>
+    <p>A pattern can be made out of almost anything. Two materials commonly worked with are wax and oil clay.</p>
+    <p>A decent moldable wax can be made as
+      follows:<code>100 parts paraffin wax + 1 part beeswax + 1 part microcrystalline wax = moldable wax</code></p>
+    <p>Oil clay can be made as
+      follows:<code>100g calcium carbonate + 100g paraffin wax + 50ml petroleum jelly + 50ml linseed oil = oil clay</code>
+    </p>
   </section>
-  
+
   <section class="main-section" id="molds">
     <header>Molds</header>
     <p>There are two main mold-types:</p>
     <ul>
       <li>Expendable</li>
       <ul>
-        <li><strong>Sand casting</strong> is where a pattern is pressed into sand and then removed.  Metal is then poured into the cavity.</li>
-        <li><strong>Plaster casting</strong> is where a pattern is pressed into plaster, the plaster is allowed to harden and then the pattern is removed and metal is poured into the cavity.  It can only be used with non-ferrous metals due to melting point constraints.</li>
-        <li><strong>Investment casting</strong> is where a pattern is coated in the mold material (most commonly a ceramic slurry and sand mixture).  The pattern is then burned or melted out of the mold and the metal is poured into the cavity.</li>
+        <li><strong>Sand casting</strong> is where a pattern is pressed into sand and then removed. Metal is then poured
+          into the cavity.</li>
+        <li><strong>Plaster casting</strong> is where a pattern is pressed into plaster, the plaster is allowed to
+          harden and then the pattern is removed and metal is poured into the cavity. It can only be used with
+          non-ferrous metals due to melting point constraints.</li>
+        <li><strong>Investment casting</strong> is where a pattern is coated in the mold material (most commonly a
+          ceramic slurry and sand mixture). The pattern is then burned or melted out of the mold and the metal is poured
+          into the cavity.</li>
       </ul>
       <li>Non-expendable</li>
       <ul>
-        <li><strong>Permanent mold casting</strong> is when a reusable mold used.  The mold is often metal or heat-resistant rubber and designed in peices.  This often involves a great amount of planning and mold-design.</li>
-        <li><strong>Centrifugal casting</strong> is when metal is poured into the mold as it is spinning and the metal is drawn through the mold by the centrifugal force.  This is especially useful in creating small, highly-detailed peices such as jewelry.</li>
+        <li><strong>Permanent mold casting</strong> is when a reusable mold used. The mold is often metal or
+          heat-resistant rubber and designed in peices. This often involves a great amount of planning and mold-design.
+        </li>
+        <li><strong>Centrifugal casting</strong> is when metal is poured into the mold as it is spinning and the metal
+          is drawn through the mold by the centrifugal force. This is especially useful in creating small,
+          highly-detailed peices such as jewelry.</li>
       </ul>
     </ul>
   </section>
-  
+
   <section class="main-section" id="furnaces">
     <header>Furnaces</header>
-    <p>Depending on the melting point of the metal, a different furance must be used that will reach the appropriate temperature without changing the property of the metal.</p>
+    <p>Depending on the melting point of the metal, a different furance must be used that will reach the appropriate
+      temperature without changing the property of the metal.</p>
     <ul>
       <li>A pot and hand-held blowtorch can be used for metals with a very low melting temperature such as pewter</li>
-      <li>A propane furnace is useful for metals with a moderate melting temperature such as copper, aluminum and bronze.</li>
+      <li>A propane furnace is useful for metals with a moderate melting temperature such as copper, aluminum and
+        bronze.</li>
       <li>Iron is most commonly cast on an amature level using a cupola furnace.</li>
     </ul>
-    <p>A flux material often will need to be used to remove impuraties from the metal and help prevent the metal from reacting with the fuel or the oxygen and forming and unwanted alloy.</p>
-    <p>It is also important to be aware that the purity of the metal will depend highly on where it was sourced.  Alloys such as pewter, bronze and brass can sometimes contain toxic elements such as antimony, that will be released when heated.</p>
+    <p>A flux material often will need to be used to remove impuraties from the metal and help prevent the metal from
+      reacting with the fuel or the oxygen and forming and unwanted alloy.</p>
+    <p>It is also important to be aware that the purity of the metal will depend highly on where it was sourced. Alloys
+      such as pewter, bronze and brass can sometimes contain toxic elements such as antimony, that will be released when
+      heated.</p>
   </section>
-  
+
   <section class="main-section" id="finishing">
     <header>Finishing</header>
-    <p>It will often be necessary to cut off flashing as well as vents and sprews using a grinder.  Any extra mold material may need to be removed from difficult areas with a sand blaster.  The metal can be left raw, but it is not uncommon to polish, petina and seal a peice with wax to prevent unwanted oxidization.</p>
+    <p>It will often be necessary to cut off flashing as well as vents and sprews using a grinder. Any extra mold
+      material may need to be removed from difficult areas with a sand blaster. The metal can be left raw, but it is not
+      uncommon to polish, petina and seal a peice with wax to prevent unwanted oxidization.</p>
   </section>
-  
+
   <section class="main-section" id="safety">
     <header>Safety</header>
-    <p>Always be sure to use proper safety precautions.  Hold a safety meeting before the start of each pour and ensure that any observers are also informed of their part.</p>
+    <p>Always be sure to use proper safety precautions. Hold a safety meeting before the start of each pour and ensure
+      that any observers are also informed of their part.</p>
     <p>Ensure good ventalation and wear resperators when appropriate</p>
-  <p>Avoid synthetic materials such as rayon, nylon, and plastic.  Idealy everyone involved in the pour will wear eye protection as well as a metal face sheild and leather boots, jackets, gloves and chapps but if full equipment is not available then at least ensure that cotton is perfered over any material that might melt to the skin.</p>
-    <p>Water buckets and appropriate fire extinguishers should be made available.  All participants should know how to damp down and remove the heat source from the furnaces.</p>
+    <p>Avoid synthetic materials such as rayon, nylon, and plastic. Idealy everyone involved in the pour will wear eye
+      protection as well as a metal face sheild and leather boots, jackets, gloves and chapps but if full equipment is
+      not available then at least ensure that cotton is perfered over any material that might melt to the skin.</p>
+    <p>Water buckets and appropriate fire extinguishers should be made available. All participants should know how to
+      damp down and remove the heat source from the furnaces.</p>
   </section>
-  
+
   <section class="main-section" id="reference">
     <header>Reference</header>
-    <p>More information can be found at the <a href="https://en.wikipedia.org/wiki/Casting_(metalworking)" target="_blank">Wikipedia</a> page for metal casting.
+    <p>More information can be found at the <a href="https://en.wikipedia.org/wiki/Casting_(metalworking)"
+        target="_blank">Wikipedia</a> page for metal casting.
   </section>
-    
-  
+
+
 </main>
