--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel-"stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 <nav id="navbar">
   <header>Metal Casting</header>
